# Assetto-CM-Discord-Admin-Bot

./: .gitignore  README.md  config.example.yaml  pyproject.toml  start_acbot.bat
acbot/: __main__.py  app.py  bot.py  config.py  doctor.py  events.py  flows.py  state.py  ui.py  util.py
acbot/ac/: content.py  downloads.py  http_info.py  ini.py  presets.py  process.py  staging.py  udp.py  uploads.py
acbot/ac/backends/: assettoserver.py  base.py  vanilla.py
acbot/cogs/: downloads.py  entries.py  leaderboard.py  presets.py  server.py  settings.py  status.py  uploads.py
acbot/leaderboard/: db.py  ingest.py  queries.py  schema.sql
acbot/web/: __init__.py  auth.py  discord_auth.py  pages.py  server.py  tls.py
tests/: conftest.py  test_autostart.py  test_config.py  test_content.py  test_e2e_replay.py  test_ini.py  test_leaderboard.py  test_presets_staging.py  test_process.py  test_udp.py  test_web_auth.py  test_web_discord.py  test_web_tls.py
tools/: replay_udp.py
