[project]
name = "acbot"
version = "0.1.0"
description = "Discord admin bot for Assetto Corsa servers managed with Content Manager"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "psutil>=5.9",
    "PyYAML>=6.0",
    # Only used to auto-generate a self-signed cert for the web UI when HTTPS is
    # on and you haven't supplied your own tls_cert/tls_key.
    "cryptography>=41",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
acbot = "acbot.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["acbot*"]

[tool.setuptools.package-data]
"acbot.leaderboard" = ["schema.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
